--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title_separator          : "-"
 name                     : &name "Zhou Zhou"
 description              : &description "personal description"
 url                      : https://zhouzhou38.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : ""
+baseurl                  : "/blog" # the subpath of your site, e.g. "/blog"
+repository               : "https://github.com/zhouzhou38?tab=repositories"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
