--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ author:
   name             : "Zhou Zhou"
   pronouns         : "he/his"  
   bio              : "I am a software developer, full-stack developer, and avid gamer with expertise in machine learning, deep learning, computer vision, and natural language processing (NLP). I am also passionate about reading and have a strong interest in law."
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
+  location         : "Flushing, New York State, United States"
+  employer         : "New York University"
+  uri              : "www.google.com" # URL
   email            : "none@example.org" 
 
   # Academic websites
