--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Zhou Zhou"
   pronouns         : "he/his"  
   bio              : "I am a software developer, full-stack developer, and avid gamer with expertise in machine learning, deep learning, computer vision, and natural language processing (NLP). I am also passionate about reading and have a strong interest in law."
-  location         : "Flushing, NY, United States"
+  location         : "Flushing"
   employer         : "New York University"
   uri              : "" # URL
   email            : "none@example.org" 
