--- a/_config.yml
+++ b/_config.yml
@@ -27,17 +27,17 @@ author:
   bio              : "I am a software developer, full-stack developer, and avid gamer with expertise in machine learning, deep learning, computer vision, and natural language processing (NLP). I am also passionate about reading and have a strong interest in law."
   location         : "Flushing, NY, United States"
   employer         : "New York University"
-  uri              : "https://www.nyu.edu/" # URL
-  email            : "none@example.org" 
+  uri              : "" # URL
+  email            : "zzzhou652@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=ft3An4YAAAAJ&hl=en&authuser=2"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/my-orcid?orcid=0009-0008-1170-0439"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  pubmed           : # URL 
+  researchgate     : "https://www.researchgate.net/profile/Zhou-Zhou-166/research"
   scopus           : # URL
 
   # Repositories and software development
